# pp-manager

./: .eslintrc.cjs  .prettierrc.cjs  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  appConfig.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/2023-07-01-124353_init/: down.sql  up.sql
src-tauri/src/: error.rs  main.rs
src-tauri/src/app/: mod.rs
src-tauri/src/command/: commands.rs  mod.rs  sku.rs  tag.rs
src-tauri/src/domain/: entity.rs  mod.rs  sku.rs  tag.rs
src-tauri/src/domain/skus/: mod.rs
src-tauri/src/domain/skus/usecase/: mod.rs
src-tauri/src/domain/tags/: mod.rs
src-tauri/src/domain/tags/usecase/: mod.rs
src-tauri/src/infra/: mod.rs  sku.rs  tag.rs
src-tauri/src/ipc/: mod.rs
src-tauri/src/ipc/input/: mod.rs  sku.rs  tag.rs
src-tauri/src/ipc/response/: mod.rs  sku.rs  tag.rs
src-tauri/src/model/: sku.rs
src-tauri/src/port/: input.rs  mod.rs  repostiory.rs  response.rs  sku.rs  tag.rs
src-tauri/src/repository/: mod.rs  schema.rs  sku.rs  tag.rs
src-tauri/src/repository/sqlx/: mod.rs
src-tauri/src/repository/sqlx/sku/: entity.rs  mod.rs
src-tauri/src/repository/sqlx/tag/: entity.rs  mod.rs
src-tauri/src/service/: mod.rs  tag.rs
src-tauri/src/sql/: create.sql
src-tauri/src/store/: connection.rs  database.rs  diesel.rs  migrator.rs  mod.rs  schema.rs  sku.rs
src-tauri/src/tauriop/: mod.rs
src-tauri/src/usecase/: mod.rs  sku.rs  tag.rs
src-tauri/src/utils/: mod.rs
src/components/input/: NumberInput.tsx  TextInput.tsx
src/components/layout/: MainContent.tsx  MainLayout.tsx
src/components/modal/: Modal.tsx  ModalFormSubmissionButton.tsx
src/components/navbar/: Navbar.tsx  itemList.ts
src/components/table/: Table.tsx
src/components/utils/: icon.tsx
src/config/: ConfigContext.tsx  appConfig.ts
src/pages/TestPage/: TestPage.tsx  TestPage2.tsx
src/routes/: AppRoutes.tsx  routes.tsx  routesList.tsx
src/routes/Playground/: Playground.tsx
src/routes/Test/: Test.tsx  TestFormContext.tsx  TestFormFields.tsx
src/routes/Test2/: ModalInsertSKU.tsx  ModalUpsertSKU.tsx  SKUUpsertFormContext.tsx  SKUUpsertFormFields.tsx  TableLists.tsx  Test2.tsx
src/service/: core.ts
src/service/hooks/: ipc.tsx  sku.tsx  tag.tsx
src/service/types/: common.ts  index.ts  mutation.ts  query.ts  sku.ts  tag.ts
src/utils/: Order.ts  date.ts  types.ts
