[package]
name = "pp-manager"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "=0.27.0", features = ["bundled"] }
uuid = { version = "1.3.3", features= ["v4", "fast-rng", "macro-diagnostics"] }
dotenv = "0.15.0"
diesel = { version = "2.1.0", features = ["sqlite"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15"
tokio = { version = "1.28.1", features = ["full"] }
chrono = "0.4.26"
derive-getters = "0.3.0"
async-trait = "0.1.68"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "sqlite" ] }
sea-query = "0.29.1"
sea-query-binder = { version = "0.4.0", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
